[package]
name = "hwfq"
version = "0.1.0"
edition = "2021"

[features]
datapath = ["tun-tap", "libc", "socket2", "pnet", "flume"]
bin = ["datapath", "clap", "tracing-subscriber", "htb-argparse"]
afd = ["rand", "yaml-rust"]
hdwrr = ["yaml-rust"]
htb = ["csv", "serde"]
drr = ["csv", "serde"]
htb-argparse = ["htb", "clap"]
drr-argparse=["clap"]
hwfq-audit = []

[dependencies]
quanta = "0.12"
tracing = "0.1"
color-eyre = "0.6"
etherparse = "0.14"
yaml-rust = { version = "0.4", optional = true }
csv = { version = "1.3", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
tun-tap = { version = "0.1", default-features=false, features = [], optional = true }
socket2 = { version = "0.5.3", features = ["all"], optional = true }
pnet = { version = "0.29", optional = true }
libc = { version = "0.2", optional = true }
flume = { version = "0.11", optional = true }
rand = { version = "0.8", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
tracing-subscriber  = { version = "0.3", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"

[[bin]]
name = "hwfq"
required-features = ["bin", "afd", "hdwrr"]

[[bin]]
name = "policer"
required-features = ["htb", "bin"]

[[bin]]
name = "uds_out"
required-features = ["bin"]

[[example]]
name = "weight_tree"
required-features = ["hdwrr"]
